[tool.poetry]
name = "sadovod-bnl"
version = "1.0.0"
description = ""
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
license = "CC-BY-NC-ND-4.0"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
mkdocs-material = "9.5.25"
Pillow = "10.3.0"
CairoSVG = "2.7.1"
mkdocs-git-revision-date-localized-plugin = "1.2.6"
mkdocs-autorefs = "0.5.0"
mkdocs-git-committers-plugin-2 = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
