[tool.poetry]
name = "sadovod-bnl"
version = "1.0.0"
description = ""
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
license = "CC-BY-NC-ND-4.0"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.0"
mkdocs-material = "9.5.41"
Pillow = "10.4.0"
CairoSVG = "2.7.1"
mkdocs-git-revision-date-localized-plugin = "1.2.9"
mkdocs-autorefs = "1.2.0"
mkdocs-git-committers-plugin-2 = "2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
